--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
 	<description>Maven Web Project for Java Programming Language</description>
 
 	<organization>
-		<name>Mithun Technologies</name>
-		<url>http://mithuntechnologies.com/</url>
+		<name>Minfy Technologies</name>
+		<url>http://minfytechnologies.com/</url>
 	</organization>
 
 	<properties>
@@ -114,7 +114,7 @@
 		<repository>
 		     <id>nexus</id>
 		     <name>proxy-repo-mss</name>
-	              <url>http://54.146.149.125:8081/repository/wallmart-proxy/</url>
+	              <url>http://3.110.168.246:8081/repository/maven-central/</url>
 		</repository>
 	</repositories>
 
