--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 		<snapshotRepository>
 			<id>nexus</id>
 			<name>Snapshot</name>
-			<url>http://52.90.58.16:8081/repository/wallmart-snapsot/</url>
+			<url>http://52.90.58.16:8081/repository/</url>
 		</snapshotRepository>
          		
 	</distributionManagement>
